2003-04-25  Mark Page  <mpagenva@aol.com>

	* nsd/tclvar.c (NsTclNsvArrayObjCmd): (bug fix) nsv_array exists
	must return true if an nsv exists, regardless of the number of
	array elements in the nsv.

2003-04-24  Mark Page  <mpagenva@aol.com>

	* nsd/queue.c (ConnRun): Ensure that a Internal Error status is
	returned to the client if an error status is returned from a
	pre-auth filter.  Previously, the connection was simply closed,
	causing difficult to diagnose problems to the client.  Also
	allow traces to run in this situation, so that access logging can
	occur.

2003-04-23  Mark Page  <mpagenva@aol.com>

	* nsd/log.c (NsTclLogObjCmd): (bug fix) Tweeked previous fix to
	suppress trailing space on output.

2003-04-22  Nathan Folkman <shmooved@aol.com>

        * nsd/log.c: (bug fix) Fixed bug causing first two string
        args of "ns_log" to be improperly concatendated.

2003-04-16  Mark Page  <mpagenva@aol.com>

	* nsd/modload.c (NsLoadModules): (bug) Failed parsing the explicit
	initialization specification properly.

2003-04-10  Mark Page  <mpagenva@aol.com>

	* TAG aolserver_v4_r0_beta_5
	
2003-04-07  Mark Page  <mpagenva@aol.com>

	* nsd/tclthread.c (NsTclThread): ensure that the server has
	completed it's initializtion prior to initiating TclEval.
	* nsd/nsmain.c (Ns_WaitForStartup): add dirty-read of the
	conf.started flag.

2003-04-04  Mark Page  <mpagenva@aol.com>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Moved interp tracing functionality into ns_ictl
	api as one of it's subfunctions, removing the
	ns_register_interptrace api previously created.

2003-04-03  Mark Page  <mpagenva@aol.com>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Provide tcl api that exposes Ns_TclInitInterps
	and Ns_TclRegisterTrace.  ns_register_interptrace.

2003-03-30  Scott S. Goodwin  <scott@scottg.net>

	* include/ns.h:
          nsd/driver.c:
          nssock/nssock.c:
          nsssl/nsssl.c: Modified Ns_DriverInit. Instead of passing all args